--- a/ex009/index.html
+++ b/ex009/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Trabalhando com Listas:</h1>
-    <ol>
+    <hr>
+    <h2>Lista Ordenada:</h2>
+    <ol type="1">
         <li>Acordar</li>
         <li>Tomar Café</li>
         <li>Escovar os dentes</li>
@@ -16,6 +18,27 @@
         <li>Trabalhar</li>
         <li>Jantar</li>
         <li>Dormir</li>
+    </ol>
+    <h2>Lista Não Ordenada:</h2>
+    <ul>
+        <li>Pão</li>
+        <li>Biscoitos</li>
+        <li>Bolo</li>
+        <li>Café</li>
+    </ul>
+    <h2>Minha Linguagens Favoritas:</h2>
+    <ol>
+        <li>Front-End:</li>
+        <ul>
+            <li>JavaScript</li>
+            <li>PHP</li>
+        </ul>
+        <li>Back-End:</li>
+        <ul>
+            <li>Java</li>
+            <li>Python</li>
+            <li>Ruby</li>
+        </ul>
     </ol>
 </body>
 </html>
